--- a/desktop.css
+++ b/desktop.css
@@ -14,7 +14,7 @@
         width: 300px;
         height: 300px;
         margin-top: 40px;
-        /* margin-right: 40px; */
+        margin-right: 40px;
     }
 
     div {
